--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
-    <title>vue-simply-scroll</title>
+    <title>vue-simple-scroll</title>
   </head>
   <body>
     <div id="app"></div>
